<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:paddingBottom="100dp"
        android:id="@+id/beach_view">

        <!-- TextView for the title -->
        <TextView
            android:id="@+id/beach_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="sans-serif"
            android:text="Dockwieler Beach"
            android:contentDescription="Beach title"
            android:textSize="34sp"
            android:textStyle="bold" />

        <!-- Rating Row -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <!-- Label for the rating -->
            <TextView
                android:id="@+id/beach_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="4.5"
                android:textColor="@color/dark_gray"
                android:textSize="20sp"
                android:textStyle="bold" />

            <!-- Star Rating -->
            <RatingBar
                android:id="@+id/star_rating_bar"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:isIndicator="true"
                android:numStars="5"
                android:progressTint="@color/oceanblue"
                android:rating="4.5"
                android:stepSize="0.1" />

            <!-- Number of ratings -->
            <TextView
                android:id="@+id/num_ratings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="(11,241)"
                android:textColor="@color/dark_gray"
                android:textSize="15sp" />

        </LinearLayout>

        <!-- Tab Section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="2dp">

            <TextView
                android:id="@+id/tab_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="Overview"
                android:textColor="@color/oceanblue"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tab_reviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Reviews"
                android:textColor="@color/dark_gray"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginEnd="20dp" />

            <TextView
                android:id="@+id/tab_weather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Weather"
                android:textColor="@color/dark_gray"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"
            android:layout_marginVertical="5dp" />


    </LinearLayout>

</ScrollView>