...
            android:orientation="horizontal"
            android:weightSum="1">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:contentDescription="Hour Icon"
                android:src="@drawable/outline_label_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
...
