<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/loginPage"
    android:background="@color/white">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="Welcome Back!"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginemail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/oceanblue"
        app:helperText=""
        app:helperTextTextColor="#F00000"
        app:layout_constraintBottom_toTopOf="@id/loginpassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginEmailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableStart="@drawable/email_icon"
            android:drawablePadding="10dp"
            android:hint="Email"
            android:textSize="15sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginpassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/oceanblue"
        app:helperText=""
        app:helperTextTextColor="#F00000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginemail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableStart="@drawable/lock_icon"
            android:drawablePadding="10dp"
            android:hint="Password"
            android:inputType="textPassword"
            android:textSize="15sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginpassword"
        android:layout_marginTop="140dp"
        android:text="Login"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@drawable/rounded_button"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:onClick="login"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="First Time User?"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/signup"
        android:layout_marginTop="40dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/dark_gray" />

    <Button
        android:id="@+id/signup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginpassword"
        android:layout_marginTop="280dp"
        android:text="Create Account"
        android:textSize="20sp"
        android:textColor="@color/dark_gray"
        android:background="@drawable/rounded_box"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:onClick="createAccount"/>





</androidx.constraintlayout.widget.ConstraintLayout>